--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light w-100">
                     <div class="col-lg-2 col-8">
                         <div class="logo">
-                                <img src="images/logo/Logo white with text.png" alt="logo">
+                            <img src="images/logo/Logo white with text.png" alt="logo">
                         </div>
                     </div> <!-- ./col-lg-2 -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -73,35 +73,37 @@
                                                     <span>ID : 01234567</span>
                                                 </div>
                                                 <div class="col-12">
-                                                        <ul class="list-user-form-nav">
-                                                                <li>
-                                                                    <a href="#">Collections</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#">Browse Your Stock</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#">Special request</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#">Settings</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#">Logout</a>
-                                                                </li>
-                                                            </ul>
+                                                    <ul class="list-user-form-nav">
+                                                        <li>
+                                                            <a href="#">Collections</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Browse Your Stock</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Special request</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Settings</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#">Logout</a>
+                                                        </li>
+                                                    </ul>
                                                 </div>
                                             </div> <!-- ./row -->
                                         </div> <!-- ./head-user-form -->
                                     </div> <!-- ./user-form -->
                                 </li>
-                                <li>
+                                <li class="cart-popup">
                                     <i class="fa fa-cart-plus"></i>
                                 </li>
                             </ul> <!-- ./header-icons -->
                         </div> <!-- ./col-lg-4 -->
                     </div>
                 </nav>
+
+
             </div> <!-- ./row -->
             <div class="search-box-header mx-auto mt-5">
                 <div class="row">
@@ -156,6 +158,113 @@
         </div> <!-- ./container -->
     </header>
     <!-- End Header -->
+
+    <!-- PopUp cart -->
+    <div class="pernt-popup py-5">
+        <div class="pop-up-cart">
+            <h2 class="title-popup bolder mb-5">Cart</h2>
+            <hr>
+            <div class="cart-body">
+                <div class="row">
+                    <div class="col-lg-8 col-md-6 col-12">
+                        <div class="box-cart">
+                            <div class="box-cart-imges">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <img src="images/cart/Mask Group 117.png" alt="" draggable="false">
+                                    </div>
+                                    <div class="col-8">
+                                        <p class="imag-name-cart bolder">
+                                            image name, id:123456/collctions name
+                                        </p>
+                                        <p class="imam-pric-cart">
+                                            image pric
+                                            <span class="bolder">100$</span>
+                                        </p>
+                                        <i class="fa fa-calculator" aria-hidden="true"></i>
+                                        <p class="enhaced-cart">
+                                            Lorem, ipsum dolor.
+                                            <span class="bolder"> + 120.8 $</span>
+                                        </p>
+                                        <i class="fas fa-window-close "></i>
+                                        <a href="#" class="edit-cart">Edit</a>
+                                        <span class="how-cart d-block text-center">?</span>
+                                    </div>
+                                </div> <!-- ./row -->
+                            </div> <!-- ./box-cart-imges -->
+                            <div class="box-cart-imges my-3">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <img src="images/cart/Mask Group 17.png" alt="" draggable="false">
+                                    </div>
+                                    <div class="col-8">
+                                        <p class="imag-name-cart bolder">
+                                            image name, id:123456/collctions name
+                                        </p>
+                                        <p class="imam-pric-cart">
+                                            image pric
+                                            <span class="bolder">100$</span>
+                                        </p>
+                                        <i class="fa fa-calculator" aria-hidden="true"></i>
+                                        <p class="enhaced-cart">
+                                            Lorem, ipsum dolor.
+                                            <span class="bolder"> + 120.8 $</span>
+                                        </p>
+                                        <i class="fas fa-window-close "></i>
+                                        <a href="#" class="edit-cart">Edit</a>
+                                        <span class="how-cart d-block text-center">?</span>
+                                    </div>
+                                </div> <!-- ./row -->
+                            </div> <!-- ./box-cart-imges -->
+                            <div class="box-cart-imges">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <img src="images/cart/Mask Group 167.png" alt="" draggable="false">
+                                    </div>
+                                    <div class="col-8">
+                                        <p class="imag-name-cart bolder">
+                                            image name, id:123456/collctions name
+                                        </p>
+                                        <p class="imam-pric-cart">
+                                            image pric
+                                            <span class="bolder">100$</span>
+                                        </p>
+                                        <i class="fa fa-calculator" aria-hidden="true"></i>
+                                        <p class="enhaced-cart">
+                                            Lorem, ipsum dolor.
+                                            <span class="bolder"> + 120.8 $</span>
+                                        </p>
+                                        <i class="fas fa-window-close "></i>
+                                        <a href="#" class="edit-cart">Edit</a>
+                                        <span class="how-cart d-block text-center">?</span>
+                                    </div>
+                                </div> <!-- ./row -->
+                            </div> <!-- ./box-cart-imges -->
+                        </div> <!-- box-cart -->
+                    </div> <!-- ./cols -->
+                    <div class="col-lg-4 col-md-6 col-12 text-center">
+                        <div class="prici-cart">
+                            <div class="total-prici-cart">
+                                <p>Your Remaining Balace</p>
+                                <span class="bolder"> 500$ </span>
+                            </div>
+                            <div class="total-prici-cart">
+                                <p>Your Remaining Balace</p>
+                                <span class="bolder"> 500$ </span>
+                            </div>
+                            <div class="total-prici-cart">
+                                <p>Your Remaining Balace</p>
+                                <span class="bolder"> 500$ </span>
+                            </div>
+
+                            <button class="btns">Dowonload</button>
+                        </div>
+                    </div> <!-- ./cols -->
+                </div> <!-- ./row -->
+            </div>
+            <i class="fas fa-window-close  close-popup-cart"></i>
+        </div> <!-- ./pop-pu-cart -->
+    </div> <!-- ./pernt-popup -->
 
 
 
