--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
             <hr>
             <div class="cart-body">
                 <div class="row">
-                    <div class="col-lg-8 col-md-6 col-12">
+                    <div class="col-lg-8 col-12">
                         <div class="box-cart">
                             <div class="box-cart-imges">
                                 <div class="row">
-                                    <div class="col-4">
-                                        <img src="images/cart/Mask Group 117.png" alt="" draggable="false">
+                                    <div class="col-md-4 col-12">
+                                        <img src="images/cart/Mask Group 117.png" alt="" draggable="false" width="100%">
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-md-8 col-12">
                                         <p class="imag-name-cart bolder">
                                             image name, id:123456/collctions name
                                         </p>
@@ -193,10 +193,10 @@
                             </div> <!-- ./box-cart-imges -->
                             <div class="box-cart-imges my-3">
                                 <div class="row">
-                                    <div class="col-4">
-                                        <img src="images/cart/Mask Group 17.png" alt="" draggable="false">
+                                    <div class="col-md-4 col-12">
+                                        <img src="images/cart/Mask Group 17.png" alt="" draggable="false" width="100%">
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-md-8 col-12">
                                         <p class="imag-name-cart bolder">
                                             image name, id:123456/collctions name
                                         </p>
@@ -216,10 +216,10 @@
                             </div> <!-- ./box-cart-imges -->
                             <div class="box-cart-imges">
                                 <div class="row">
-                                    <div class="col-4">
-                                        <img src="images/cart/Mask Group 167.png" alt="" draggable="false">
+                                    <div class="col-md-4 col-12">
+                                        <img src="images/cart/Mask Group 167.png" alt="" draggable="false" width="100%">
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-md-8 col-12">
                                         <p class="imag-name-cart bolder">
                                             image name, id:123456/collctions name
                                         </p>
@@ -239,7 +239,7 @@
                             </div> <!-- ./box-cart-imges -->
                         </div> <!-- box-cart -->
                     </div> <!-- ./cols -->
-                    <div class="col-lg-4 col-md-6 col-12 text-center">
+                    <div class="col-lg-4 col-12 text-center">
                         <div class="prici-cart">
                             <div class="total-prici-cart">
                                 <p>Your Remaining Balace</p>
@@ -263,9 +263,237 @@
         </div> <!-- ./pop-pu-cart -->
     </div> <!-- ./pernt-popup -->
 
+    <!-- Start Examples -->
+    <section class="examples py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-12">
+                    <div class="title-examples bolder">
+                        <h2>Examples of what we can do</h2>
+                        <p>282,020,915 stock photos, vectors, and illustrations are available royalty-free.</p>
+                        <p>282,915 videoes are available royalty-free.</p>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-md-4 col-12 m-auto text-center">
+                    <div class="btn-vid-pho">
+                        <button class="active">Photos</button>
+                        <button>Video</button>
+                    </div>
+                </div> <!-- ./col -->
+            </div> <!-- ./row -->
+            <div class="photo-grid">
+                <div class="img-grid">
+                    <div class="overlay">
+                        <img src="images/example/Mask Group 4.png" alt="Mask">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div> <!-- ./overlay -->
+                    <div class="overlay">
+                        <img src="images/example/nathan-anderson-ZjOQmOOWmGs-unsplash.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                </div> <!-- ./img-grid -->
+                <div class="img-grid">
+                    <div class="overlay">
+                        <img src="images/example/jared-erondu-j4PaE7E2_Ws-unsplash.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                    <div class="overlay">
+                        <img src="images/example/Asset 6.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                </div> <!-- ./img-grid -->
+                <div class="img-grid">
+                    <div class="overlay">
+                        <img src="images/example/Mask Group 3.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                    <div class="overlay">
+                        <img src="images/example/tyler-nix-sitjgGsVIAs-unsplash.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                </div> <!-- ./img-grid -->
+                <div class="img-grid">
+                    <div class="overlay">
+                        <img src="images/example/Mask Group 2.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                    <div class="overlay">
+                        <img src="images/example/ryan-franco-RDFnpTprLw8-unsplash.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                </div> <!-- ./img-grid -->
+                <div class="img-grid">
+                    <div class="overlay">
+                        <img src="images/example/Mask Group 1.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                    <div class="overlay">
+                        <img src="images/example/Asset 13.png" alt="">
+                        <div class="content-over-grid">
+                            <p class="title-content-over">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                            <div class="right-over">
+                                <i class="fas fa-cart-plus    "></i>
+                                <i class="fas fa-download    "></i>
+                            </div>
+                            <div class="down-over">
+                                <i class="fas fa-plus-circle"> Save</i>
+                                <i class="fas fa-download"> Try</i>
+                                <i class="fas fa-share"> Share</i>
+                            </div>
+                        </div> <!-- ./content-over-grid -->
+                    </div>
+                </div> <!-- ./img-grid -->
+            </div> <!-- ./photo-grid -->
+            <div class="my-5 text-center">
+                <a class="more mx-auto" href="#">More</a>
+            </div>
+        </div> <!-- ./container -->
+    </section>
+    <!-- End Examples -->
 
-
-
+    <!--Start Mosaic Stock-->
+    <section class="mosaic-stock py-5 mt-5">
+        <div class="overlay"></div>
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+            <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
+        </video>
+        <div class="container h-100">
+            <div class="d-flex h-100 text-center align-items-center">
+                <div class=" txt">
+                    <h2>Why Mosaic Stock?</h2>
+                    <p class="py-4">Try 10 Days free Membership </p>
+                    <form class="form-mosaic">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                        <button class="btn">Sign Up</button>
+                    </form>
+                </div>   <!--./txt-->
+            </div>
+            <i class="fa fa-angle-up" aria-hidden="true"></i>
+        </div>   <!--./container-->
+    </section>
+    <!--End Mosaic Stock-->
+    <section class="trusted">
+        <div class="container text-center">
+            <div class="title-trusted">
+                <h2>Trusted By These Fine Companies</h2>
+                <p>We are proud of you</p>
+            </div> <!-- ./title-trusted -->
+            <div class="trusted-gird pt-3">
+                <div class="trusted-img">
+                    <img src="images/trusted/Placeholder-(Square).png" alt="">
+                </div>
+                <div class="trusted-img">
+                    <img src="images/trusted/Pslaceholder-(Square).png" alt="">
+                </div>
+                <div class="trusted-img">
+                    <img src="images/trusted/BG.png" alt="">
+                </div>
+                <div class="trusted-img">
+                    <img src="images/trusted/Plafceholder-(Square).png" alt="">
+                </div>
+            </div>
+        </div> <!-- .container -->
+    </section>
 
 
 
